Fixed visual bugs, updated everything and it is fully functional.

--- a/Views/Account/Identity.cshtml
+++ b/Views/Account/Identity.cshtml
@@ -174,11 +174,11 @@
 {
 	<div id="snackbar">
 		<div class="toast-header">
-			<img src="~/img/red-cross.png" height="16" class="me-2">
-			<strong class="me-auto">Error</strong>
+			<img src="~/img/green-check.png" height="16" class="me-2">
+			<strong class="me-auto">Accepted</strong>
 		</div>
 		<div class="toast-body">
-			Cannot delete role because there are users in it, remove role from users first
+			Role Accepted Succesfully
 		</div>
 	</div>
 }
@@ -187,10 +187,10 @@
 	<div id="snackbar">
 		<div class="toast-header">
 			<img src="~/img/red-cross.png" height="16" class="me-2">
-			<strong class="me-auto">Error</strong>
+			<strong class="me-auto">Denied</strong>
 		</div>
 		<div class="toast-body">
-			Cannot delete role because there are users in it, remove role from users first
+			Role Denied Successfully
 		</div>
 	</div>
 }
