Small update in naming

--- a/Views/AcademieJaar/Index.cshtml
+++ b/Views/AcademieJaar/Index.cshtml
@@ -10,7 +10,7 @@
         <span>Home</span>
     </a>
     <h1>Academiejaren</h1>
-    <a class="btn btn-outline-success btn-sm viewButton @(User.IsInRole("Admin") ? "" : "invisible")" asp-action="Create">Creëer Academiejaar</a>
+    <a class="btn btn-outline-success btn-sm viewButton @(User.IsInRole("Admin") ? "" : "invisible")" asp-action="Create">Create Academiejaar</a>
 </div>
 
 <table class="table">
