--- a/Views/Account/ManageUserRoles.cshtml
+++ b/Views/Account/ManageUserRoles.cshtml
@@ -17,7 +17,7 @@
             <div class="form-group d-flex justify-content-between">
                 <a class="btn-sm backArrow" asp-action="Identity" asp-controller="Account">
                     <img src="~/img/arrow-left-black.png" height="16" />
-                    <span>Terug</span>
+                    <span>Back</span>
                 </a>
                 <div class="btn-group">
                     <input type="submit" value="Remove Role From User" name="submitButton" class="btn btn-outline-danger btn-sm viewButton" />
