--- a/Views/Gebruiker/Details.cshtml
+++ b/Views/Gebruiker/Details.cshtml
@@ -31,7 +31,7 @@
         <div class="form-group d-flex justify-content-between">
             <a class="btn-sm backArrow" asp-action="Index" asp-controller="Gebruiker">
                 <img src="~/img/arrow-left-black.png" height="16"/>
-                <span >Terug</span>
+                <span >Back</span>
             </a>
             <a asp-action="Edit" asp-route-id="@Model?.GebruikerId" class="btn btn-outline-success btn-sm viewButton">Edit Gebruiker</a>
         </div>
