--- a/Views/Gebruiker/Index.cshtml
+++ b/Views/Gebruiker/Index.cshtml
@@ -10,7 +10,7 @@
         <span>Home</span>
     </a>
     <h1>Gebruikers</h1>
-    <a class="btn btn-outline-success btn-sm viewButton" asp-action="Create">Creëer Gebruiker</a>
+    <a class="btn btn-outline-success btn-sm viewButton" asp-action="Create">Create Gebruiker</a>
 </div>
 
 <table class="table">
