--- a/Views/Handboek/Edit.cshtml
+++ b/Views/Handboek/Edit.cshtml
@@ -34,7 +34,7 @@
             <div class="form-group d-flex justify-content-between">
                 <a class="btn-sm backArrow" href="javascript:history.back()">
                     <img src="~/img/arrow-left-black.png" height="16"/>
-                    <span >Terug</span>
+                    <span >Back</span>
                 </a>
                 <input type="submit" value="Update Handboek" class="btn btn-outline-success btn-sm viewButton"/>
             </div>
