--- a/Views/Inschrijving/Index.cshtml
+++ b/Views/Inschrijving/Index.cshtml
@@ -10,7 +10,7 @@
         <span>Home</span>
     </a>
     <h1>Inschrijvingen</h1>
-    <a class="btn btn-outline-success btn-sm viewButton @(User.IsInRole("Admin") || User.IsInRole("Student") ? "" : "invisible")" asp-action="Create">Creëer Inschrijving</a>
+    <a class="btn btn-outline-success btn-sm viewButton @(User.IsInRole("Admin") || User.IsInRole("Student") ? "" : "invisible")" asp-action="Create">Create Inschrijving</a>
 </div>
 
 <div class="d-flex justify-content-center row">
