--- a/Views/Student/Edit.cshtml
+++ b/Views/Student/Edit.cshtml
@@ -22,7 +22,7 @@
             <div class="form-group d-flex justify-content-between">
                 <a class="btn-sm backArrow" href="javascript:history.back()">
                     <img src="~/img/arrow-left-black.png" height="16"/>
-                    <span >Terug</span>
+                    <span >Back</span>
                 </a>
                 @if (ViewBag.GebruikerId != null) { <input type="submit" value="Update Student" class="btn btn-outline-success btn-sm viewButton" /> }
                 else { <input type="submit" value="Update Student" class="btn btn-outline-success btn-sm viewButton" disabled/> }
