--- a/Views/VakLector/Index.cshtml
+++ b/Views/VakLector/Index.cshtml
@@ -10,7 +10,7 @@
         <span>Home</span>
     </a>
     <h1>VakLector</h1>
-    <a class="btn btn-outline-success btn-sm viewButton @(User.IsInRole("Admin") || User.IsInRole("Lector") ? "" : "invisible")" asp-action="Create">Creëer VakLector</a>
+    <a class="btn btn-outline-success btn-sm viewButton @(User.IsInRole("Admin") || User.IsInRole("Lector") ? "" : "invisible")" asp-action="Create">Create VakLector</a>
 </div>
 
 <table class="table">
