--- a/Views/Account/CreateRoles.cshtml
+++ b/Views/Account/CreateRoles.cshtml
@@ -13,9 +13,9 @@
             <div class="form-group d-flex justify-content-between">
                 <a class="btn-sm backArrow" asp-action="Identity" asp-controller="Account">
                     <img src="~/img/arrow-left-black.png" height="16" />
-                    <span>Terug</span>
+                    <span>Back</span>
                 </a>
-                <input type="submit" value="Creëer Rol" class="btn btn-outline-success btn-sm viewButton"/>
+                <input type="submit" value="Create Role" class="btn btn-outline-success btn-sm viewButton"/>
             </div>
         </form>
     </div>
