--- a/Views/Account/Identity.cshtml
+++ b/Views/Account/Identity.cshtml
@@ -8,8 +8,17 @@
     <h1>Identity</h1>
 	<div>
 		<div class="btn-group">
-			<a class="btn btn-outline-primary btn-sm viewButton" asp-controller="Account" asp-action="RoleRequest">Rol Verzoeken</a>
-			<a class="btn btn-outline-primary btn-sm viewButton" asp-controller="Account" asp-action="ManageUserRoles">Beheer Rollen van Gebruikers</a>
+			<a class="btn btn-outline-primary btn-sm viewButton" asp-controller="Account" asp-action="ManageUserRoles">Manage Users Roles</a>
+			<a class="btn btn-outline-primary btn-sm viewButton" asp-controller="Account" asp-action="RoleRequest">
+				@* Badge for RoleRequests *@
+				@if (ViewBag.RoleRequestsBadge != 0)
+				{
+					<span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger" id="">
+						@ViewBag.RoleRequestsBadge
+						<span class="visually-hidden">unread messages</span>
+					</span>
+				} Role Requests
+			</a>
 		</div>
 	</div>
 </div>
@@ -51,7 +60,7 @@
 						<tr>
 							<th>All Roles</th>
 							<th>
-								<a class="btn btn-outline-success btn-sm viewButton" asp-controller="Account" asp-action="CreateRoles">Creëer Rol</a>
+								<a class="btn btn-outline-success btn-sm viewButton" asp-controller="Account" asp-action="CreateRoles">Create Role</a>
 							</th>
 						</tr>
 					</thead>
@@ -98,99 +107,15 @@
 </div>
 
 @* Alert after a successfull delete or add of roles *@
-@if (ViewBag.Alert == "RoleCreated")
+@if (ViewBag.RoleTitle != null)
 {
 	<div id="snackbar">
 		<div class="toast-header">
-			<img src="~/img/green-check.png" height="16" class="me-2">
-			<strong class="me-auto">Succesfull</strong>
+			<img src="@ViewBag.RoleImg" height="16" class="me-2">
+			<strong class="me-auto">@ViewBag.RoleTitle</strong>
 		</div>
 		<div class="toast-body">
-			Succesfully Added Role
-		</div>
-	</div>
-}
-@if (ViewBag.Alert == "RoleDeleted")
-{
-	<div id="snackbar">
-		<div class="toast-header">
-			<img src="~/img/green-check.png" height="16" class="me-2">
-			<strong class="me-auto">Succesfull</strong>
-		</div>
-		<div class="toast-body">
-			Succesfully Deleted Role
-		</div>
-	</div>
-}
-@if (ViewBag.Alert == "RoleAssignedToUser")
-{
-	<div id="snackbar">
-		<div class="toast-header">
-			<img src="~/img/green-check.png" height="16" class="me-2">
-			<strong class="me-auto">Succesfull</strong>
-		</div>
-		<div class="toast-body">
-			Succesfully Assign a User a Role
-		</div>
-	</div>
-}
-@if (ViewBag.Alert == "RoleRemovedFromUser")
-{
-	<div id="snackbar">
-		<div class="toast-header">
-			<img src="~/img/green-check.png" height="16" class="me-2">
-			<strong class="me-auto">Succesfull</strong>
-		</div>
-		<div class="toast-body">
-			Succesfully Removed Role from User
-		</div>
-	</div>
-}
-@if (ViewBag.Alert == "UserDeleted")
-{
-	<div id="snackbar">
-		<div class="toast-header">
-			<img src="~/img/green-check.png" height="16" class="me-2">
-			<strong class="me-auto">Succesfull</strong>
-		</div>
-		<div class="toast-body">
-			Succesfully Deleted User
-		</div>
-	</div>
-}
-@if (ViewBag.Alert == "UsersInRole")
-{
-	<div id="snackbar">
-		<div class="toast-header">
-			<img src="~/img/red-cross.png" height="16" class="me-2">
-			<strong class="me-auto">Error</strong>
-		</div>
-		<div class="toast-body">
-			Cannot delete role because there are users in it, remove role from users first
-		</div>
-	</div>
-}
-@if (ViewBag.Alert == "RoleAccepted")
-{
-	<div id="snackbar">
-		<div class="toast-header">
-			<img src="~/img/green-check.png" height="16" class="me-2">
-			<strong class="me-auto">Accepted</strong>
-		</div>
-		<div class="toast-body">
-			Role Accepted Succesfully
-		</div>
-	</div>
-}
-@if (ViewBag.Alert == "RoleDenied")
-{
-	<div id="snackbar">
-		<div class="toast-header">
-			<img src="~/img/red-cross.png" height="16" class="me-2">
-			<strong class="me-auto">Denied</strong>
-		</div>
-		<div class="toast-body">
-			Role Denied Successfully
+			@ViewBag.RoleMessage
 		</div>
 	</div>
 }
