--- a/Views/Account/RoleRequest.cshtml
+++ b/Views/Account/RoleRequest.cshtml
@@ -17,7 +17,10 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.User)
+                @Html.DisplayNameFor(model => model.Naam)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Email)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Role)
@@ -30,7 +33,8 @@
         {
             <tr>
                 <td>No Requests</td>
-                <td>No Requests</td>
+                <td>-</td>
+                <td>-</td>
                 <td></td>
             </tr>
         }
@@ -40,7 +44,10 @@
             {
                 <tr>
                     <td>
-                        @item.User
+                        @item.Voornaam @item.Naam
+                    </td>
+                    <td>
+                        @item.Email
                     </td>
                     <td>
                         @item.Role
