--- a/Views/Handboek/Index.cshtml
+++ b/Views/Handboek/Index.cshtml
@@ -10,7 +10,7 @@
         <span>Home</span>
     </a>
     <h1>Handboeken</h1>
-    <a class="btn btn-outline-success btn-sm viewButton" asp-action="Create">Creëer Handboek</a>
+    <a class="btn btn-outline-success btn-sm viewButton" asp-action="Create">Create Handboek</a>
 </div>
 
 <table class="table">
