--- a/Views/Student/Create.cshtml
+++ b/Views/Student/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model HogeschoolPXL.Models.Student
 
 @{
-    ViewData["Title"] = "Creëer";
+    ViewData["Title"] = "Create";
 }
 
-<h1 class="titleView">Creëer Student</h1>
+<h1 class="titleView">Create Student</h1>
 
 <div class="row d-flex justify-content-center">
     <div class="col-md-4">
@@ -20,10 +20,10 @@
             <div class="form-group d-flex justify-content-between">
                 <a class="btn-sm backArrow" asp-action="Index" asp-controller="Student">
                     <img src="~/img/arrow-left-black.png" height="16"/>
-                    <span >Terug</span>
+                    <span >Back</span>
                 </a>
-                @if (ViewBag.GebruikerId != null) { <input type="submit" value="Creëer Student" class="btn btn-outline-success btn-sm viewButton"/> }
-                else { <input type="submit" value="Creëer Student" class="btn btn-outline-success btn-sm viewButton" disabled/> }
+                @if (ViewBag.GebruikerId != null) { <input type="submit" value="Create Student" class="btn btn-outline-success btn-sm viewButton"/> }
+                else { <input type="submit" value="Create Student" class="btn btn-outline-success btn-sm viewButton" disabled/> }
             </div>
         </form>
     </div>
