--- a/Views/Vak/Details.cshtml
+++ b/Views/Vak/Details.cshtml
@@ -31,7 +31,7 @@
             <div class="form-group d-flex justify-content-between">
                 <a class="btn-sm backArrow" asp-action="Index" asp-controller="Vak">
                     <img src="~/img/arrow-left-black.png" height="16"/>
-                    <span >Terug</span>
+                    <span >Back</span>
                 </a>
                 <a asp-action="Edit" asp-route-id="@Model?.VakId" class="btn btn-outline-success btn-sm viewButton">Edit Vak</a>
             </div>
