--- a/Views/VakLector/Create.cshtml
+++ b/Views/VakLector/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model HogeschoolPXL.Models.VakLector
 
 @{
-    ViewData["Title"] = "Creëer";
+    ViewData["Title"] = "Create";
 }
 
-<h1 class="titleView">Creëer VakLector</h1>
+<h1 class="titleView">Create VakLector</h1>
 
 <div class="row d-flex justify-content-center">
     <div class="col-md-4">
@@ -22,9 +22,9 @@
             <div class="form-group d-flex justify-content-between">
                 <a class="btn-sm backArrow" asp-action="Index" asp-controller="VakLector">
                     <img src="~/img/arrow-left-black.png" height="16"/>
-                    <span >Terug</span>
+                    <span >Back</span>
                 </a>
-                <input type="submit" value="Creëer VakLector" class="btn btn-outline-success btn-sm viewButton"/>
+                <input type="submit" value="Create VakLector" class="btn btn-outline-success btn-sm viewButton"/>
             </div>
         </form>
     </div>
