Added Search. Updated AccountController so it's bugless.

--- a/Views/Account/RoleRequest.cshtml
+++ b/Views/Account/RoleRequest.cshtml
@@ -17,9 +17,6 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Naam)
-            </th>
-            <th>
                 @Html.DisplayNameFor(model => model.Email)
             </th>
             <th>
@@ -44,16 +41,13 @@
             {
                 <tr>
                     <td>
-                        @item.Voornaam @item.Naam
-                    </td>
-                    <td>
                         @item.Email
                     </td>
                     <td>
                         @item.Role
                     </td>
                     <td>
-                        <a class="btn btn-outline-primary btn-sm viewButton" asp-controller="Account" asp-action="RoleRequestChoose" asp-route-choice="Accept" asp-route-id="@item.Id">Accept</a>
+                        <a class="btn btn-outline-primary btn-sm viewButton mx-1" asp-controller="Account" asp-action="RoleRequestChoose" asp-route-choice="Accept" asp-route-id="@item.Id">Accept</a>
                         <a class="btn btn-outline-danger btn-sm viewButton" asp-controller="Account" asp-action="RoleRequestChoose" asp-route-choice="Decline" asp-route-id="@item.Id">Decline</a>
                     </td>
                 </tr>
