--- a/Views/Shared/_HeaderPartial.cshtml
+++ b/Views/Shared/_HeaderPartial.cshtml
@@ -48,7 +48,7 @@
     </div>
 }
 
-<form role="search">
-    <input class="form-control me-2" type="search" placeholder="Zoeken" aria-label="Search">
+<form asp-controller="Student" asp-action="Index">
+    <input class="form-control me-2" type="search" placeholder="Zoeken in Studenten" name="search">
     <button class="btn btn-outline-primary" type="submit">Zoeken</button>
 </form>
