--- a/Views/Account/Register.cshtml
+++ b/Views/Account/Register.cshtml
@@ -10,7 +10,7 @@
 
 <div class="row d-flex justify-content-center">
     <div class="col-md-4">
-        <form asp-action="Register" autocomplete="new-password">
+        <form asp-action="Register" autocomplete="off">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Voornaam" class="control-label"></label>
@@ -30,7 +30,7 @@
             <div class="form-group">
                 <label asp-for="Password" class="control-label"></label>
                 <div class="togglePasswordForm">
-                    <input asp-for="Password" class="form-control password" type="password" autocomplete="new-password" />
+                    <input asp-for="Password" class="form-control password" type="password"/>
                     <i class="bi bi-eye-slash" id="togglePassword"></i>
                 </div>
                 <span asp-validation-for="Password" class="text-danger"></span>
