Added Searchbar for Inschrijvingen => Student. Addes styling and roject is done.

--- a/Views/Shared/_HeaderPartial.cshtml
+++ b/Views/Shared/_HeaderPartial.cshtml
@@ -48,7 +48,7 @@
     </div>
 }
 
-<form asp-controller="Student" asp-action="Index">
-    <input class="form-control me-2" type="search" placeholder="Zoeken in Studenten" name="search">
+<form asp-controller="Inschrijving" asp-action="Search" class="btn-group" id="searchBar">
+    <input class="form-control" type="search" placeholder="Overzicht Studenten" name="search">
     <button class="btn btn-outline-primary" type="submit">Zoeken</button>
 </form>
