Added search and fixed bugs.

--- a/Views/Account/RoleRequest.cshtml
+++ b/Views/Account/RoleRequest.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="d-flex justify-content-between mx-2 mb-3">
-    <a class="btn-sm backArrow" href="javascript:history.back()">
+    <a class="btn-sm backArrow" asp-controller="Account" asp-action="Identity">
         <img src="~/img/arrow-left-black.png" height="16" />
         <span>Home</span>
     </a>
@@ -32,7 +32,6 @@
                 <td>No Requests</td>
                 <td>-</td>
                 <td>-</td>
-                <td></td>
             </tr>
         }
         else
