--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="~/css/site.css" asp-append-version="true"/>
         <link rel="stylesheet" href="~/HogeschoolPXL.styles.css" asp-append-version="true"/>
     </head>
-    <body>
+    <body onload="showSearchBarOnStudentPage()">
         <header>
             <partial name="_HeaderPartial"/>
             <partial name="_AccountPartial"/>
