--- a/Views/Account/Register.cshtml
+++ b/Views/Account/Register.cshtml
@@ -9,36 +9,40 @@
 <h1 class="titleView">Registreer</h1>
 
 <div class="row d-flex justify-content-center">
-    <div class="col-md-4">
+    <div class="col-md-5">
         <form asp-action="Register" autocomplete="off">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Voornaam" class="control-label"></label>
-                <input asp-for="Voornaam" class="form-control" type="text" />
-                <span asp-validation-for="Voornaam" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Naam" class="control-label"></label>
-                <input asp-for="Naam" class="form-control" type="text" />
-                <span asp-validation-for="Naam" class="text-danger"></span>
+            <div class="input-group" style="justify-content:space-between">
+                <div class="form-group" style="width:48%;">
+                    <label asp-for="Voornaam" class="control-label"></label>
+                    <input asp-for="Voornaam" class="form-control" type="text" />
+                    <span asp-validation-for="Voornaam" class="text-danger"></span>
+                </div>
+                <div class="form-group" style="width:48%;">
+                    <label asp-for="Naam" class="control-label"></label>
+                    <input asp-for="Naam" class="form-control" type="text" />
+                    <span asp-validation-for="Naam" class="text-danger"></span>
+                </div>
             </div>
             <div class="form-group">
                 <label asp-for="Email" class="control-label"></label>
                 <input asp-for="Email" class="form-control" type="email"/>
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Password" class="control-label"></label>
-                <div class="togglePasswordForm">
-                    <input asp-for="Password" class="form-control password" type="password"/>
-                    <i class="bi bi-eye-slash" id="togglePassword"></i>
+            <div class="input-group" style="justify-content:space-between">
+                <div class="form-group" style="width:48%;">
+                    <label asp-for="Password" class="control-label"></label>
+                    <div class="togglePasswordForm">
+                        <input asp-for="Password" class="form-control password" type="password"/>
+                        <i class="bi bi-eye-slash" id="togglePassword"></i>
+                    </div>
+                    <span asp-validation-for="Password" class="text-danger"></span>
                 </div>
-                <span asp-validation-for="Password" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ConfirmPassword" class="control-label"></label>
-                <input asp-for="ConfirmPassword" class="form-control password" type="password"/>
-                <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
+                <div class="form-group" style="width:48%;">
+                    <label asp-for="ConfirmPassword" class="control-label">Herhaal</label>
+                    <input asp-for="ConfirmPassword" class="form-control password" type="password"/>
+                    <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
+                </div>
             </div>
             <div class="form-group">
                 <label asp-for="Roles" class="control-label">Rollen</label>
