--- a/Views/Shared/_AccountPartial.cshtml
+++ b/Views/Shared/_AccountPartial.cshtml
@@ -41,7 +41,7 @@
     else
     {
         <div class="dropdown-content" id="dropdown-logged-out">
-            <form class="d-block px-3 pt-2" asp-controller="Account" asp-action="Login" method="post" autocomplete="off">
+            <form class="d-block px-3 pt-2" asp-controller="Account" asp-action="Login" method="post">
                 <div class="form-group">
                     <label name="Email" class="control-label">Email</label>
                     <input name="Email" class="form-control" type="email" placeholder="email@example.com"/>
