--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html lang="en">
+<html>
     <head>
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -24,9 +24,7 @@
         </div>
 
         <footer class="footer">
-            <div id="footerText">
-                HogeschoolPXL
-            </div>
+            HogeschoolPXL
         </footer>
 
         <script src="~/lib/jquery/dist/jquery.min.js"></script>
